# GroupwareVR

./: .gitignore  0_rotation_trial0.csv  0_rotation_trial1.csv  3_pointing_trial0.csv  3_pointing_trial1.csv  README.md  README.txt  README.txt~  daemon.py  pilotstudie.maez  pointing2D.py  pointing2D.py~  rotation2D.py  setupEnvironment.py  setupEnvironmentWall.py  start.sh  startDisplayTrail.sh~  startDisplayTrial.sh  startDisplayTrial.sh~  startDocking.sh  startDocking.sh~  startDockingPointing.sh  startPointing2D.sh  startPointing2D.sh~  startReplay.sh  startRotation.sh~  startRotation2d.sh  startRotation3d.sh  startTasks.sh  startTest.sh  start_tracking.sh  test1.py  toDo.txt
avango-polhemus/: CMakeLists.txt
avango-polhemus-terminal/: .gitignore  CMakeLists.txt
avango-polhemus-terminal/src/: Polhemus.cpp
avango-polhemus-terminal/src/polhemus/: PiTerm.h  PiTracker.cpp  PingPong.cpp  liberty.cpp  liberty.h
avango-polhemus/examples/: polhemus-daemon.py
avango-polhemus/include/avango/daemon/polhemus/: Polhemus.h
avango-polhemus/python/: CMakeLists.txt  __init__.py  _polhemus.cpp
avango-polhemus/src/: Polhemus.cpp
avango-polhemus/src/polhemus/: PiTracker.h  PingPong.cpp  PingPong.h  liberty.cpp
avango-polhemus/src/polhemus (copy)/: PiTerm.h  PiTracker.cpp  liberty.cpp
code/: BoundsContainer.py  Cursor.py  DisksContainer.py  LogManager.py  PencilContainer.py  Phone.py  README.txt  README.txt~  RotationTarget.py  config.py  core.py  coreWall.py  daemon.py  daemon.py~  docking.py  docking2D.py  dockingPointing.py  logManager.py  pointing2D.py  replay.py  rotation.py  rotation2D.py  rotation3D.py  setupEnvironment.py  setupEnvironmentWall.py  startDemon.sh  tasks.py  test1.py
code/backup/: pointing2D_schema.py
data/materials/: tracked_object_pointing.mtl
data/objects/: colored_cross.mtl  phone.mtl  tracked_object.mtl
deamon/: daemon.py
marcel_pilot/: settin7_marcel.csv  setting1_marcel.csv  setting2_marcel.csv  setting3_marcel.csv  setting4_marcel.csv  setting5_marcel.csv  setting6_marcel.csv  setting8_marcel.csv  setting9_marcel.csv  settiong10_marcel.csv
results/: pointing2D.txt~
results/1_rotation_T3_0_R3/: 1_rotation_trial0.csv  1_rotation_trial1.csv  1_rotation_trial1.replay  1_rotation_trial10.csv  1_rotation_trial10.replay  1_rotation_trial11.csv  1_rotation_trial11.replay  1_rotation_trial12.csv  1_rotation_trial12.replay  1_rotation_trial13.csv  1_rotation_trial13.replay  1_rotation_trial14.csv  1_rotation_trial15.csv  1_rotation_trial15.replay  1_rotation_trial16.csv  1_rotation_trial17.csv  1_rotation_trial18.csv  1_rotation_trial18.replay  1_rotation_trial19.csv  1_rotation_trial2.csv  1_rotation_trial3.csv  1_rotation_trial3.replay  1_rotation_trial4.csv  1_rotation_trial4.replay  1_rotation_trial5.csv  1_rotation_trial6.csv  1_rotation_trial7.csv  1_rotation_trial8.csv  1_rotation_trial9.csv  1_rotation_trial9.replay
results/2_pointing_T3_3_R0/: 2_pointing_trial0.csv  2_pointing_trial1.csv  2_pointing_trial1.replay  2_pointing_trial10.csv  2_pointing_trial10.replay  2_pointing_trial11.csv  2_pointing_trial11.replay  2_pointing_trial12.csv  2_pointing_trial13.csv  2_pointing_trial13.replay  2_pointing_trial14.csv  2_pointing_trial15.csv  2_pointing_trial15.replay  2_pointing_trial16.csv  2_pointing_trial17.csv  2_pointing_trial18.csv  2_pointing_trial19.csv  (+11 more)
(+98 files in other folders)
